name:          hello-world
version:       0.1.0.0
cabal-version: >= 1.10
build-type:    Simple

executable hello-world
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base,
    reflex,
    reflex-dom,
    mtl,
    lens,
    containers,
    text

  -- Only use jsaddle-warp & warp *if* we're NOT on Android.

  default-language: Haskell2010
  ghc-options: -Wall -threaded
