name:          hello-world
version:       0.1.0.0
cabal-version: >= 1.10
build-type:    Simple

executable hello-world
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
    base,
    reflex,
    reflex-dom,
    mtl,
    lens,
    containers,
    text

  other-modules:
      App.Types
      App.Router
      Pages.Home
      Pages.About
      Pages.Profile
      UI.Common

  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
